--- a/public/main.css
+++ b/public/main.css
@@ -4,8 +4,25 @@ body {
 
 h1 {
 	text-align: center;
+    font-size: 90px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+
 }
 
-input {
+p {
 		text-align: center;
 }
+
+.info-container{
+
+		text-align: center;
+	    margin: auto;
+
+}
+.column{
+
+	width: 45%;
+	display: inline;
+}
+
