--- a/public/main.css
+++ b/public/main.css
@@ -23,8 +23,10 @@ p {
 
 }
 .column{
-	width: 45%;
-	display: inline-block;
+	width: 30%;
+			    margin: auto;
+
+		text-align: center;
 }
 
 label{
@@ -34,7 +36,11 @@ label{
 
 .vertical-center {
     position: absolute;
-  top: 30%;
+  top: 50%;
   left:50%;
   transform: translate(-50%,-50%);
+}
+
+.find {
+	padding-top: 50px;
 }
