--- a/public/main.css
+++ b/public/main.css
@@ -72,18 +72,13 @@ label{
 	margin: auto;
 	padding-bottom: 50px;
 }
-.footer {
-  position: absolute;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 10px;
-}
 
 
 .baby{
 	width:100%;
 
 }
+
 .twocol{
 	margin: auto;
 	text-align: center;
@@ -96,5 +91,6 @@ label{
 	padding-bottom: 40px;
 }
 #not_fb_baby{
-
+	text-align: center;
+	padding-bottom: 40px;
 }
